--- a/client/restaurant/src/styles.css
+++ b/client/restaurant/src/styles.css
@@ -1,2 +1,7 @@
-@import "https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
+
+body {
+  margin: 0;
+  font-family: Roboto, sans-serif;
+}
