--- a/client/restaurant/src/styles.css
+++ b/client/restaurant/src/styles.css
@@ -1,5 +1,6 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
+@import "https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic";
 
 body {
   margin: 0;
