--- a/client/restaurant/src/styles.css
+++ b/client/restaurant/src/styles.css
@@ -5,4 +5,14 @@
 body {
   margin: 0;
   font-family: Roboto, sans-serif;
+  background-color: whitesmoke;
+}
+
+.content {
+  width: 80%;
+  margin: auto;
+}
+
+mat-card {
+  margin-bottom: 10px;
 }
