add component to list products by category

--- a/client/restaurant/src/app/components/product/product.component.html
+++ b/client/restaurant/src/app/components/product/product.component.html
@@ -2,7 +2,7 @@
   <mat-card-title>
     {{product.name}}
   </mat-card-title>
-  <mat-card-subtitle>
+  <mat-card-subtitle *ngIf="showCategory">
     {{product.category.name}}
   </mat-card-subtitle>
   <mat-list>
