--- a/client/restaurant/src/app/components/product/product.component.html
+++ b/client/restaurant/src/app/components/product/product.component.html
@@ -15,4 +15,9 @@
       <span mat-line>{{product.price}}</span>
     </mat-list-item>
   </mat-list>
+  <mat-card-actions>
+    <button *ngIf="user()" mat-icon-button color="primary" (click)="addToCart()">
+      <mat-icon>add_shopping_cart</mat-icon>
+    </button>
+  </mat-card-actions>
 </mat-card>
