--- a/client/restaurant/src/app/components/order/order.component.html
+++ b/client/restaurant/src/app/components/order/order.component.html
@@ -21,5 +21,5 @@
       </mat-select>
     </mat-form-field>
   </mat-list>
-  <button mat-raised-button class="mat-primary" (click)="changeOrderStatus(changeorder)" >Módosítás</button>
+  <button mat-raised-button class="mat-primary" (click)="changeOrderStatus(changeorder)" >Modify</button>
 </mat-card>
