add component to delete product

--- a/client/restaurant/src/app/components/product/product.component.html
+++ b/client/restaurant/src/app/components/product/product.component.html
@@ -20,4 +20,7 @@
       <mat-icon>add_shopping_cart</mat-icon>
     </button>
   </mat-card-actions>
+  <ng-container *ngIf="admin()">
+    <button mat-raised-button class="mat-primary" (click)="clickButton($event)">Delete product</button>
+  </ng-container>
 </mat-card>
