modify components to place order, fix being redirected on refresh, snackbar notifications

--- a/client/restaurant/src/app/components/cart/cart.component.html
+++ b/client/restaurant/src/app/components/cart/cart.component.html
@@ -1,45 +1,76 @@
 <ng-container *ngIf="tableDataLoaded">
-  <mat-table *ngIf="dataSource.data.length !== 0" [dataSource]="dataSource" class="mat-elevation-z3">
+  <ng-container *ngIf="dataSource.data.length !== 0">
+    <mat-table [dataSource]="dataSource" class="mat-elevation-z3">
 
-    <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef>
-        <mat-icon>restaurant_menu</mat-icon>
-      </mat-header-cell>
-      <mat-cell *matCellDef="let element">{{element.name}}</mat-cell>
-    </ng-container>
+      <ng-container matColumnDef="name">
+        <mat-header-cell *matHeaderCellDef>
+          <mat-icon>restaurant_menu</mat-icon>
+        </mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.name}}</mat-cell>
+      </ng-container>
 
-    <ng-container matColumnDef="price">
-      <mat-header-cell *matHeaderCellDef>
-        <mat-icon>attach_money</mat-icon>
-      </mat-header-cell>
-      <mat-cell *matCellDef="let element">${{element.price}}</mat-cell>
-    </ng-container>
+      <ng-container matColumnDef="price">
+        <mat-header-cell *matHeaderCellDef>
+          <mat-icon>attach_money</mat-icon>
+        </mat-header-cell>
+        <mat-cell *matCellDef="let element">${{element.price}}</mat-cell>
+      </ng-container>
 
-    <ng-container matColumnDef="quantity">
-      <mat-header-cell *matHeaderCellDef>
-        <mat-icon>grain</mat-icon>
-      </mat-header-cell>
-      <mat-cell *matCellDef="let element">{{element.quantity}}</mat-cell>
-    </ng-container>
+      <ng-container matColumnDef="quantity">
+        <mat-header-cell *matHeaderCellDef>
+          <mat-icon>grain</mat-icon>
+        </mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.quantity}}</mat-cell>
+      </ng-container>
 
-    <ng-container matColumnDef="delete">
-      <mat-header-cell class="small" *matHeaderCellDef>
-        <div class="spacer"></div><mat-icon>remove_shopping_cart</mat-icon>
-      </mat-header-cell>
-      <mat-cell class="small" *matCellDef="let element">
-        <button mat-icon-button color="primary" (click)="deleteFromCart(element.id)">
-          <mat-icon>remove_shopping_cart</mat-icon>
-        </button>
-      </mat-cell>
-    </ng-container>
+      <ng-container matColumnDef="delete">
+        <mat-header-cell class="small" *matHeaderCellDef>
+          <div class="spacer"></div><mat-icon>remove_shopping_cart</mat-icon>
+        </mat-header-cell>
+        <mat-cell class="small" *matCellDef="let element">
+          <button mat-icon-button color="primary" (click)="deleteFromCart(element.id)">
+            <mat-icon>remove_shopping_cart</mat-icon>
+          </button>
+        </mat-cell>
+      </ng-container>
 
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-  </mat-table>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+
+    <mat-card>
+      <form>
+        <mat-card-title>
+          Place order
+        </mat-card-title>
+        <mat-list>
+          <mat-list-item>
+            <mat-icon mat-list-icon>note_add</mat-icon>
+            <span mat-line>
+              <mat-form-field class="note">
+                <input matInput #note>
+              </mat-form-field>
+            </span>
+          </mat-list-item>
+          <mat-list-item>
+            <mat-icon mat-list-icon>attach_money</mat-icon>
+            <span mat-line>{{totalPrice}}</span>
+          </mat-list-item>
+        </mat-list>
+        <mat-card-actions class="placeOrderAction">
+          <button mat-icon-button color="primary" (click)="placeOrder(note.value, $event)">
+            <mat-icon>done</mat-icon>
+          </button>
+        </mat-card-actions>
+      </form>
+    </mat-card>
+
+  </ng-container>
 
   <mat-card *ngIf="dataSource.data.length === 0">
     <mat-card-title>Cart is empty</mat-card-title>
   </mat-card>
+
 </ng-container>
 
 <mat-spinner *ngIf="!tableDataLoaded"></mat-spinner>
