--- a/client/restaurant/src/app/components/cart/cart.component.css
+++ b/client/restaurant/src/app/components/cart/cart.component.css
@@ -10,3 +10,12 @@ mat-table {
     width: 8px;
     display: inline-block;
 }
+
+.note {
+    width: 50%;
+}
+
+.placeOrderAction {
+    margin-bottom: -16px;
+    padding-bottom: 0;
+}
