--- a/client/restaurant/src/app/components/product-list-by-category/product-list-by-category.component.html
+++ b/client/restaurant/src/app/components/product-list-by-category/product-list-by-category.component.html
@@ -1,5 +1,5 @@
 <h3 class="mat-h3">{{pageSubTitle}}</h3>
 <ng-container *ngIf="products">
-    <app-product *ngFor="let product of products" [product]="product" [showCategory]="false"></app-product>
+    <app-product *ngFor="let product of products" [product]="product" [showCategory]="false" (clickAddToCart)="addToCart($event)"></app-product>
 </ng-container>
 <mat-spinner *ngIf="!products"></mat-spinner>
