--- a/client/restaurant/src/app/components/product-list/product-list.component.html
+++ b/client/restaurant/src/app/components/product-list/product-list.component.html
@@ -1,4 +1,4 @@
 <ng-container *ngIf="products">
-    <app-product *ngFor="let product of products" [product]="product" (delProduct)="delProduct($event)"></app-product>
+    <app-product *ngFor="let product of products" [product]="product" (clickAddToCart)="addToCart($event)" (delProduct)="delProduct($event)"></app-product>
 </ng-container>
 <mat-spinner *ngIf="!products"></mat-spinner>
