add components to list user orders and view its details, rename order component

--- a/client/restaurant/src/app/components/incoming-order-list/incoming-order-list.component.html
+++ b/client/restaurant/src/app/components/incoming-order-list/incoming-order-list.component.html
@@ -1,4 +1,4 @@
 <ng-container *ngIf="orders">
-  <app-order *ngFor="let order of orders" [order]="order"></app-order>
+  <app-incoming-order *ngFor="let order of orders" [order]="order"></app-incoming-order>
 </ng-container>
 <mat-spinner *ngIf="!orders"></mat-spinner>
