--- a/client/restaurant/src/app/components/incoming-order/incoming-order.component.html
+++ b/client/restaurant/src/app/components/incoming-order/incoming-order.component.html
@@ -8,7 +8,7 @@
   <mat-list>
     <mat-list-item *ngIf="order.note !== ''">
       <mat-icon mat-list-icon>description</mat-icon>
-      <span mat-line>{{order.note}}</span>
+      <span class="mat-list-text">{{order.note}}</span>
     </mat-list-item>
         <mat-list-item>
           <span mat-line>{{order.status.description}}</span>
