--- a/client/restaurant/src/app/components/product/product.component.html
+++ b/client/restaurant/src/app/components/product/product.component.html
@@ -8,7 +8,7 @@
   <mat-list>
     <mat-list-item *ngIf="product.description !== ''">
       <mat-icon mat-list-icon>description</mat-icon>
-      <span mat-line>{{product.description}}</span>
+      <span class="mat-list-text">{{product.description}}</span>
     </mat-list-item>
     <mat-list-item>
       <mat-icon mat-list-icon>attach_money</mat-icon>
