--- a/client/restaurant/src/app/components/restaurant/restaurant.component.html
+++ b/client/restaurant/src/app/components/restaurant/restaurant.component.html
@@ -2,7 +2,7 @@
   <mat-list>
     <mat-list-item>
       <mat-icon mat-list-icon>location_city</mat-icon>
-      <span mat-line>{{restaurant.zipCode}} {{restaurant.city.name}}, {{restaurant.address}}</span>
+      <span class="mat-list-text">{{restaurant.zipCode}} {{restaurant.city.name}}, {{restaurant.address}}</span>
     </mat-list-item>
     <mat-list-item>
       <mat-icon mat-list-icon>phone</mat-icon>
