refactor notifications, close notification on navigation, fix categories in menu, handle unselected restaurant in user settings

--- a/client/restaurant/src/styles.css
+++ b/client/restaurant/src/styles.css
@@ -40,6 +40,10 @@ mat-list-item {
   padding-bottom: 0 !important;
 }
 
+.snackBarSuccess {
+  background-color: #3f51b5;
+}
+
 .snackBarError {
   background-color: #f44336
 }
