--- a/client/restaurant/src/app/components/product-list/product-list.component.html
+++ b/client/restaurant/src/app/components/product-list/product-list.component.html
@@ -1,4 +1,9 @@
 <ng-container *ngIf="products">
-    <app-product *ngFor="let product of products" [product]="product" (clickAddToCart)="addToCart($event)" (delProduct)="delProduct($event)"></app-product>
+    <ng-container *ngIf="products.length !== 0">
+        <app-product *ngFor="let product of products" [product]="product" (clickAddToCart)="addToCart($event)" (delProduct)="delProduct($event)"></app-product>
+    </ng-container>
+    <mat-card *ngIf="products.length === 0">
+        <mat-card-title>No products</mat-card-title>
+    </mat-card>
 </ng-container>
 <mat-spinner *ngIf="!products"></mat-spinner>
