refactor register and login, add placeholders to every form

--- a/client/restaurant/src/app/components/cart/cart.component.html
+++ b/client/restaurant/src/app/components/cart/cart.component.html
@@ -48,7 +48,7 @@
             <mat-icon mat-list-icon>note_add</mat-icon>
             <span mat-line>
               <mat-form-field class="fullWidth">
-                <input matInput #note>
+                <input matInput #note placeholder="Note">
               </mat-form-field>
             </span>
           </mat-list-item>
