refactor incoming orders, change status and logout, change favicon, reverse lists of components

--- a/client/restaurant/src/app/components/cart/cart.component.html
+++ b/client/restaurant/src/app/components/cart/cart.component.html
@@ -39,7 +39,7 @@
     </mat-table>
 
     <mat-card>
-      <form>
+      <form novalidate>
         <mat-card-title>
           Place order
         </mat-card-title>
