--- a/client/restaurant/src/app/components/menu/menu.component.html
+++ b/client/restaurant/src/app/components/menu/menu.component.html
@@ -39,5 +39,5 @@
     <a mat-button routerLink="/user/register">Register</a>
   </ng-container>
   
-  <button *ngIf="admin() || user()" mat-button (click)="logout()">Log out</button>
+  <button *ngIf="admin() || user()" mat-button (click)="logOut()">Log out</button>
 </mat-toolbar>
