--- a/client/restaurant/src/app/components/product-review/product-review.component.html
+++ b/client/restaurant/src/app/components/product-review/product-review.component.html
@@ -5,7 +5,7 @@
   <mat-list>
     <mat-list-item>
       <mat-icon mat-list-icon>date_range</mat-icon>
-      <span mat-line>{{reviewService.createDateMsToDateString(review)}}</span>
+      <span mat-line>{{reviewCreateDate}}</span>
     </mat-list-item>
     <mat-list-item>
       <mat-icon mat-list-icon>person</mat-icon>
