--- a/client/restaurant/src/app/components/user-order-list/user-order-list.component.html
+++ b/client/restaurant/src/app/components/user-order-list/user-order-list.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="orders">
   <ng-container *ngIf="orders.length !== 0">
-    <app-user-order-overview *ngFor="let order of orders" [order]="order"></app-user-order-overview>
+    <app-order-overview *ngFor="let order of orders" [order]="order"></app-order-overview>
   </ng-container>
   <mat-card *ngIf="orders.length === 0">
     <mat-card-title>No orders yet</mat-card-title>
