--- a/client/restaurant/src/app/components/incoming-order-list/incoming-order-list.component.html
+++ b/client/restaurant/src/app/components/incoming-order-list/incoming-order-list.component.html
@@ -1,4 +1,9 @@
 <ng-container *ngIf="orders">
-  <app-incoming-order *ngFor="let order of orders" [order]="order"></app-incoming-order>
+  <ng-container *ngIf="orders.length !== 0">
+    <app-order-overview *ngFor="let order of orders" [order]="order"></app-order-overview>
+  </ng-container>
+  <mat-card *ngIf="orders.length === 0">
+    <mat-card-title>No incoming orders</mat-card-title>
+  </mat-card>
 </ng-container>
 <mat-spinner *ngIf="!orders"></mat-spinner>
