--- a/client/restaurant/src/app/components/order-overview/order-overview.component.html
+++ b/client/restaurant/src/app/components/order-overview/order-overview.component.html
@@ -2,19 +2,15 @@
   <mat-list>
     <mat-list-item>
       <mat-icon mat-list-icon>date_range</mat-icon>
-      <span mat-line>{{orderService.createDateMsToDateString(order)}}</span>
+      <span mat-line>{{orderCreateDate}}</span>
     </mat-list-item>
     <mat-list-item>
       <mat-icon mat-list-icon>info</mat-icon>
       <span mat-line>{{order.status.description}}</span>
     </mat-list-item>
-    <mat-list-item>
-      <mat-icon mat-list-icon>attach_money</mat-icon>
-      <span mat-line>{{order.total}}</span>
-    </mat-list-item>
   </mat-list>
   <mat-card-actions>
-    <a mat-icon-button color="primary" routerLink="/user/order/{{order.id}}">
+    <a mat-icon-button color="primary" routerLink="/order/{{order.id}}">
       <mat-icon>zoom_in</mat-icon>
     </a>
   </mat-card-actions>
