--- a/client/restaurant/src/app/components/product-review-list/product-review-list.component.html
+++ b/client/restaurant/src/app/components/product-review-list/product-review-list.component.html
@@ -1,5 +1,4 @@
 <ng-container *ngIf="reviews">
-  <h3 class="mat-h3">{{pageSubTitle}}</h3>
   <ng-container *ngIf="reviews.reviews.length !== 0">
     <app-product-review *ngFor="let review of reviews.reviews" [review]="review"></app-product-review>
   </ng-container>
@@ -8,7 +7,7 @@
   </mat-card>
 </ng-container>
 <mat-spinner *ngIf="!reviews"></mat-spinner>
-<mat-card *ngIf="user()" class="writeReviewCard">
+<mat-card *ngIf="userService.isUser" class="writeReviewCard">
   <form novalidate>
     <mat-card-title>
       Write review
